# SECAI-Summer-School

./: CODE_OF_CONDUCT.md  Example-Notebook.ipynb  Introduction to Machine Learning.pptx  IntroductionMachineLearning.ipynb  Introduction_to_ML_preliminary.docx  README.md  main.py  pyproject.toml  requirements.txt  setup.cfg
results/: sklearn_linear_model.joblib  sklearn_linear_model_baseline.joblib  sklearn_linear_model_colab.joblib  torch_1L_bi_lstm_model.pt  torch_1L_lstm_model.pt  torch_2L_bi_lstm_model.pt  torch_2L_lstm_model.pt  torch_cnn_model.pt  torch_cnn_padded_model.pt  torch_deep_mlp_model.pt  torch_deep_mlp_model_final.pt  torch_linear_model.pt  torch_linear_model_final.pt  torch_mlp_model.pt  torch_mlp_model_final.pt  torch_naive_mlp_model.pt
scripts/: create_venv.ps1  create_venv.sh  run.ps1  run.sh  run_jupyter-lab.ps1  run_rupyter-lab.sh
src/data/: dataset_without_pytorch.py
src/secai/: __init__.py
src/secai/torch_models/: __init__.py  _models.py
src/torch_models/: __init__.py  _early_stopping.py  _models.py
