[metadata]
name = secai_machine_learning_workshop_PETER_STEINER
version = 0.0.1
authors = Peter Steiner
author_email = peter.steiner@tu-dresden.de
"Homepage" = "https://github.com/TUD-STKS/SECAI-Summer-School"
description = "SECAI Summer School"
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD 3-Clause License
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3

[options]
zip_safe = True
requires-python = ">=3.9"
install_requires =
    torch
    medmnist
    scikit-learn==1.2.2

[options.extras_require]
notebook =
    seaborn
    matplotlib
    jupyter
